# DL_TA_Sessions

./: .gitignore  main.py  pyproject.toml
data/FashionMNIST/artifacts/ta2_cnns_resumable/: train_val_split.npz
data/MIMIC/: 20260213_2113_pytorch_mlp_optuna_submission.csv  20260213_2118_pytorch_mlp_optuna_submission.csv  comin_felix_CML_2025.csv  garcia_joan_CML_2025.csv  lgbm_replication_submission.csv  lgbm_replication_text+num_no_leak_hadm_id.csv  lgbm_replication_text+num_no_leak_subject_id.csv  lgbm_replication_text_only.csv  pytorch_mlp_optuna_submission.csv
data/MIMIC/optuna_HEF/: optuna_mimic.db
data/spotify/: optuna_spotify.db
session_1/: GPU_Benchmark_HousePrices.ipynb  MLP_run.py  TA1_GPU_Benchmark_HousePrices.ipynb  TA1_lgbm_pytorch.ipynb  TA1_linreg.ipynb  TA1_linreg.py  TA1_mlp_optuna.ipynb
session_2/: TA2_CNNs.ipynb  TA2_CNNs_benchmark.ipynb  plot_utils.py
session_3/: TA3_FT_save.ipynb  TA3_FT_save_resnet18.ipynb  TA3_FT_save_test.ipynb  TA3_FT_save_test_resnet18.ipynb  plot_utils.py
