[project]
name = "ta-sessions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "fastparquet>=2024.11.0",
    "iprogress>=0.4",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.8",
    "jax>=0.9.0.1",
    "jinja2>=3.1.6",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "optuna>=4.5.0",
    "optuna-integration>=4.5.0",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "torch>=2.10.0",
    "ucimlrepo>=0.0.7",
    "xgboost>=3.1.1",
]
